style.css
:root {
    --header-height: 50px;
    --footer-height: var(--header-height) / 2;
}

body {
    font-family: 'Roboto', sans-serif;
    font-weight: 300;
    margin: 0;
    font-size: 0.8em;
}

header, footer {
    padding: 5px 0;
    display: flex;
    align-items: center;
    justify-content: center;
    box-sizing: border-box;
    color: white;
}

header {
    height: var(--header-height);
    background-color: green;
    font-size: large;
}

footer {
    height: var(--footer-height);
    background-color: black;
}

main {
    display: flex;
    justify-content: center;
    height: calc(100vh - var(--header-height) - var(--footer-height));
    box-sizing: border-box;
}

.content {
    width: 35%;
    height: 100%;
    display: flex;
}

.content > * {
    padding: 15px 30px;
}

.nav {
    width: 20%;
    background-color: red;
}

.nav-content {
    width: 100%;
    padding-bottom: 10px;
    color: white;
    text-decoration: underline;
}

.l {
    font-size: large;
    color: red;
}

